--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,11 +4,15 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - 'helm/**'
+      - 'k8s/**'
+      - 'README.md'
 
 env:
   REGISTRY: daryladriene
-  BACKEND_IMAGE_NAME: lush-dew:backend_
-  FRONTEND_IMAGE_NAME: lush-dew:frontend_
+  BACKEND_IMAGE_NAME: lush-dew
+  FRONTEND_IMAGE_NAME: lush-dew
 
 jobs:
   test-build-push:
@@ -29,17 +33,17 @@ jobs:
         working-directory: ./backend/cosmeticshop
         run: |
           docker build \
-            -t $REGISTRY/$BACKEND_IMAGE_NAME${{ github.run_number }} \
+            -t ${{REGISTRY}}/${{BACKEND_IMAGE_NAME}}:backend_${{ github.run_number }} \
             -f Dockerfile .
-          docker push $REGISTRY/$BACKEND_IMAGE_NAME${{ github.run_number }}
+          docker push ${{REGISTRY}}/${{BACKEND_IMAGE_NAME}}:backend_${{ github.run_number }}
 
       - name: Build & push frontend Docker image
         working-directory: ./frontend
         run: |
           docker build \
-            -t $REGISTRY/$FRONTEND_IMAGE_NAME${{ github.run_number }} \
+            -t ${{REGISTRY}}/${{FRONTEND_IMAGE_NAME}}:frontend_${{ github.run_number }} \
             -f Dockerfile .
-          docker push $REGISTRY/$FRONTEND_IMAGE_NAME${{ github.run_number }}
+          docker push ${{REGISTRY}}/${{FRONTEND_IMAGE_NAME}}:frontend_${{ github.run_number }}
 
       - name: Update both image tags
         run: |
