--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,9 @@ on:
       - 'helm/**'
       - 'k8s/**'
       - 'README.md'
+      
+permissions:
+  contents: write
 
 env:
   REGISTRY: daryladriene
