--- a/helm/lushdew-chart/values.yaml
+++ b/helm/lushdew-chart/values.yaml
@@ -7,8 +7,8 @@ replicaCount: 1
 
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
-  tag1: "v1"
-  tag2: "v4"
+  tag1: "10"
+  tag2: "10"
 
 # This is for the secrets for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
 imagePullSecrets: []
