--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,6 @@ jobs:
         run: |
           git config --global user.name "daryladrien"
           git config --global user.email "daryladrien27@gmail.com"
-          git add helm/lushdew-chart/values.yaml
+          git add helm/lushdew-chart/values.yml
           git commit -m "ci: bump image tag to ${{ github.run_number }}"
           git push
