--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -175,7 +175,7 @@ jobs:
       - name: Run Trivy vulnerability scan on backend image
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: '$REGISTRY/$BACKEND_IMAGE_NAME:backend_v${{ github.run_number }}'
+          image-ref: '${{ env.REGISTRY }}/${{ env.BACKEND_IMAGE_NAME }}:backend_v${{ github.run_number }}'
           format: 'table' # Or 'sarif' to upload to GitHub Security tab
           severity: 'CRITICAL,HIGH'
           exit-code: '1' # Fail the pipeline if vulnerabilities above severity are found
@@ -183,7 +183,7 @@ jobs:
       - name: Run Trivy vulnerability scan on frontend image
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: '$REGISTRY/$FRONTEND_IMAGE_NAME:frontend_v${{ github.run_number }}'
+          image-ref: '${{ env.REGISTRY }}/${{ env.FRONTEND_IMAGE_NAME }}:frontend_v${{ github.run_number }}'
           format: 'table' # Or 'sarif'
           severity: 'CRITICAL,HIGH'
           exit-code: '1'
