--- a/backend/cosmeticshop/Dockerfile
+++ b/backend/cosmeticshop/Dockerfile
@@ -29,3 +29,6 @@ EXPOSE 8000
 
 # Run migrations and start Django
 CMD ["sh", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
+
+# Suppress Trivy VEX notice (optional for CI)
+ENV TRIVY_DISABLE_VEX_NOTICE=true
